<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/select_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:elevation="10dp"
        android:minHeight="?actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="Сhoose a preference" />

    <androidx.cardview.widget.CardView
        android:id="@+id/alcohol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@string/alcohol"
            android:scaleType="centerCrop"
            android:src="@drawable/alcohol" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:gravity="center"
            android:text="@string/alcohol_text"
            android:textSize="50sp"
            android:textStyle="italic|bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nonalcohol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@string/non_alcohol"
            android:scaleType="fitXY"
            android:src="@drawable/nonalcohol" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/non_alcohol_text"
            android:textSize="50sp"
            android:textStyle="italic|bold" />
    </androidx.cardview.widget.CardView>


</LinearLayout>